--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=3000;
 MONGOURL=mongodb://localhost:27017/patientDb;
 JWT_SECRET=your_jwt_secret;
+VITE_API_URL=https://generativelanguage.googleapis.com/v1/models/gemini-2.5-pro:generateContent?key=AIzaSyDWUoqAHyT_Ug5fqrlJJr5auZe0fKjFloI
