--- a/client/package.json
+++ b/client/package.json
@@ -13,11 +13,15 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.1",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.24",
+    "i18next": "^25.6.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.2.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
